@@ -1,5 +1,6 @@
 v3.1.1 (2020.01.xx)
   - (Windows) Use a BELOW_NORMAL thread priority for the background task scheduler
+  - Remove "Use Original Air Date timestamp for Recorded TV programs" setting
 
 v3.1.0 (2019.12.23)
   - Revert cURL library to version 7.66.0
